methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:1: error: Missing closing brace `}' assumed here
override def run() { 
^MethodsPicture:1: error: expected start of definition
override def run() { 
         ^MethodsPicture:4: error: expected class or object definition
def faireMotif() {
^MethodsPicture:11: error: expected class or object definition
def ligneMotif() {
^